@@ -1,4 +1,4 @@
-# pce-macplus.cfg
+# pce-MODEL.cfg
 #
 # Example config file
 
@@ -18,14 +18,15 @@ path = "-."
 
 
 # Enable or disable the startup memory test.
-memtest = 1
+memtest = 0
 
 
 system {
 	# The Macintosh model to emulate. Valid models are:
-	# mac-plus: A Macintosh 128K, 512K, 512Ke or Plus
-	# mac-se:   A Macintosh SE or SE-FDHD
-	model = "mac-plus"
+	# mac-plus:    A Macintosh 128K, 512K, 512Ke or Plus
+	# mac-se:      A Macintosh SE or SE-FDHD
+	# mac-classic: A Macintosh Classic
+	model = "MODEL"
 }
 
 cpu {
@@ -56,13 +57,13 @@ ram {
 # Multiple "rom" sections may be present.
 rom {
 	# The file from which the rom code is loaded
-	file = "macplus.rom"
+	file = "MODEL.rom"
 
 	# The base address
 	address = 0x400000
 
 	# The rom size
-	size = 256K
+	size = (system.model == "mac-classic") ? 512K : 256K
 
 	# The memory block is initialized with this value.
 	default = 0xff
@@ -78,20 +79,6 @@ rom {
 	# The memory block is initialized with this value.
 	default = 0xff
 }
-
-
-# All "load" sections are processed after all the "ram" and "rom"
-# sections. It is possible to overwrite read-only blocks, too.
-#load {
-#	format = "srec"
-#	file = "macplus.srec"
-#}
-
-#load {
-#	format = "binary"
-#	address = 0x400000
-#	file = "macplus.bin"
-#}
 
 
 # Multiple "terminal" sections may be present. The first
@@ -169,12 +156,28 @@ keyboard {
 }
 
 
+adb {
+	# Enable the ADB mouse
+	mouse = true
+
+	# Enable the ADB extended keyboard
+	keyboard = true
+
+	# Map keypad keys to motion keys
+	keypad_motion = false
+}
+
+
 rtc {
 	# On startup the parameter RAM is loaded from this file. On
 	# shutdown it is written back.
-	file = "pram-mac-plus.dat"
+	file = "pram-MODEL.dat"
 
 	realtime = 1
+
+	# Set the startup disk to the ROM disk. This only works with
+	# the Macintosh Classic ROM.
+	romdisk = 0
 }
 
 
