@@ -1,296 +1,0 @@
-# pce-macse.cfg
-#
-# Example config file
-
-
-# Add a directory to the end of the file search path.
-#
-# The search path is used if an input file is specified with
-# a relative file name. In that case the file is searched for
-# in all directories of the search path. The current directory
-# is always implicitly added to the end of the search path.
-#
-# If the first character of the string is a "-", the directory
-# is added to the beginning of the search path.
-path = "rom"
-path = "PCE_DIR_DATA/macplus"
-path = "-."
-
-
-# Enable or disable the startup memory test.
-memtest = 1
-
-
-system {
-	# The Macintosh model to emulate. Valid models are:
-	# mac-plus: A Macintosh 128K, 512K, 512Ke or Plus
-	# mac-se:   A Macintosh SE or SE-FDHD
-	model = "mac-se"
-}
-
-cpu {
-	# The CPU model. Valid models are "68000" and "68010".
-	model = "68000"
-
-	# The CPU speed multiplier. A value of 1 emulates a
-	# 7.8336 MHz CPU. A higher value emulates a faster CPU
-	# but also takes up more host CPU time. A value of 0
-	# dynamically adjusts the CPU speed.
-	speed = 0
-}
-
-
-# Multiple "ram" sections may be present.
-ram {
-	# The base address
-	address = 0
-
-	# The memory block size
-	size = 4096K
-
-	# The memory block is initialized with this value.
-	default = 0x00
-}
-
-
-# Multiple "rom" sections may be present.
-rom {
-	# The file from which the rom code is loaded
-	file = "macse.rom"
-
-	# The base address
-	address = 0x400000
-
-	# The rom size
-	size = 256K
-
-	# The memory block is initialized with this value.
-	default = 0xff
-}
-
-rom {
-	# This is the PCE extension ROM.
-
-	address = 0xf80000
-	size    = 256K
-	file    = "macplus-pcex.rom"
-
-	# The memory block is initialized with this value.
-	default = 0xff
-}
-
-
-# All "load" sections are processed after all the "ram" and "rom"
-# sections. It is possible to overwrite read-only blocks, too.
-#load {
-#	format = "srec"
-#	file = "macse.srec"
-#}
-
-#load {
-#	format = "binary"
-#	address = 0x400000
-#	file = "macse.bin"
-#}
-
-
-# Multiple "terminal" sections may be present. The first
-# one will be used unless a terminal type is specified
-# on the command line.
-terminal {
-	driver = "sdl"
-
-	# The terminal escape key. The default is "ESC".
-	#escape = "CtrlRight"
-	#escape = "ESC"
-	#escape = "F12"
-	#escape = "Menu"
-
-	# The terminal scale factor. Only integral values are
-	# allowed.
-	scale = 1
-
-	# Add a border around the image
-	border = 0
-
-	# Start in fullscreen mode.
-	fullscreen = 0
-
-	# The mouse speed. The host mouse speed is multiplied by
-	# (mouse_mul_x / mouse_div_x) and (mouse_mul_y / mouse_div_y)
-	mouse_mul_x = 1
-	mouse_div_x = 1
-	mouse_mul_y = 1
-	mouse_div_y = 1
-}
-
-terminal {
-	driver = "x11"
-
-	# The terminal escape key. The default is "ESC".
-	#escape = "CtrlRight"
-	#escape = "ESC"
-	#escape = "F12"
-	#escape = "Menu"
-
-	scale  = 1
-
-	# The mouse speed
-	mouse_mul_x = 1
-	mouse_div_x = 1
-	mouse_mul_y = 1
-	mouse_div_y = 1
-}
-
-
-sound {
-	# Apply a low-pass filter with the specified cut-off
-	# frequency in Herz. This is separate from the low-pass
-	# filter in the sound driver. If the frequency is 0,
-	# the filter is disabled.
-	lowpass = 8000
-
-	#driver = "null"
-	#driver = "wav:wav=speaker.wav:lowpass=0:wavfilter=0"
-	#driver = "oss:dev=/dev/dsp:wav=speaker.wav:lowpass=0:wavfilter=0"
-	driver = "sdl:wav=speaker.wav:lowpass=0:wavfilter=0"
-}
-
-
-adb {
-	# Enable the ADB mouse
-	mouse = true
-
-	# Enable the ADB extended keyboard
-	keyboard = true
-
-	# Map keypad keys to motion keys
-	keypad_motion = false
-}
-
-
-rtc {
-	# On startup the parameter RAM is loaded from this file. On
-	# shutdown it is written back.
-	file = "pram-mac-se.dat"
-
-	realtime = 1
-}
-
-
-sony {
-	# The floppy disk insertion delay. Set this to:
-	# 0: never automatically insert the disk
-	# 1: have the disk inserted immediately on startup.
-	#    The System will then either boot from the disk or
-	#    eject it.
-	# x: delay insertion by x (emulated) seconds.
-	insert_delay = 15
-
-	# The insertion delay can be set for each floppy disk
-	# drive individually.
-	#insert_delay_1 = 1
-	#insert_delay_2 = 15
-	#insert_delay_3 = 15
-}
-
-
-scsi {
-	device {
-		# The SCSI ID
-		id = 6
-
-		# The drive number. This number is used to identify
-		# a "disk" section. The number itself is meaningless.
-		drive = 128
-
-		# The vendor and product strings are returned by
-		# the SCSI Inquiry command.
-		#vendor = "PCE     "
-		#product = "PCEDISK         "
-	}
-
-	device {
-		id    = 4
-		drive = 129
-	}
-
-	device {
-		id    = 2
-		drive = 130
-	}
-}
-
-
-serial {
-	# The port number. Use 0 for the modem port and 1 for
-	# the printer port.
-	port = 0
-
-	# Up to multichar characters are sent or received
-	# without any transmission delay. For a real serial port
-	# this value is 1 but larger values can speed up
-	# transmission.
-	multichar = 1
-
-	# Not all character drivers are supported on
-	# all platforms.
-	#driver = "null"
-	#driver = "posix:file=ser_a.out"
-	#driver = "pty:symlink=ser_a"
-	driver = "stdio:file=ser_a.out:flush=1"
-	#driver = "tios:file=/dev/ttyS0"
-}
-
-serial {
-	port = 1
-	driver = "stdio:file=ser_b.out"
-}
-
-
-video {
-	#address = 0x0fa700
-}
-
-
-disk {
-	drive    = 1
-	type     = "auto"
-	file     = "disk1.img"
-	optional = 1
-}
-
-disk {
-	drive    = 2
-	type     = "auto"
-	file     = "disk2.img"
-	optional = 1
-}
-
-disk {
-	drive    = 3
-	type     = "auto"
-	file     = "disk3.img"
-	optional = 1
-}
-
-disk {
-	drive    = 128
-	type     = "auto"
-	file     = "hd1.img"
-	optional = 0
-}
-
-disk {
-	drive    = 129
-	type     = "auto"
-	file     = "hd2.img"
-	optional = 1
-}
-
-disk {
-	drive    = 130
-	type     = "auto"
-	file     = "hd3.img"
-	optional = 1
-}
